--- a/index.html
+++ b/index.html
@@ -5,66 +5,143 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sakk.css">
     <title>Tegzes Márton</title>
 </head>
 
 <body>
     <header>
-        <h1>táblázat</h1>
+        <h1>Saktábla</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">kezdőlap</a></li>
-            <li><a href="tablazat.html">kezdőlap</a></li>
-            <li><a href="sakk.html">kezdőlap</a></li>
-        </ul>
-    </nav>
     <article>
         <table>
-            <caption>Ez a táblázat címe</caption>
+            <caption>SAKK</caption>
             <thead>
-                <tr>
-                <th>1</th>
-                <th>2</th>
-                <th>3</th>
-                <th>4</th>
-                </tr>
+            <tr>
+                <th><p></p></th>
+                <th>a</th>
+                <th>b</th>
+                <th>c</th>
+                <th>d</th>
+                <th>e</th>
+                <th>f</th>
+                <th>g</th>
+                <th>h</th>
+                <th><p></p></th>
+            </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th>1</th>
-                    <td>2</td>
-                    <td colspan=2 calss="osszevont">3</td>
-
+            <tr>
+                <th>1</th>
+                <td>♖</td>
+                <td>♘</td>
+                <td>♗</td>
+                <td>♕</td>
+                <td>♔</td>
+                <td>♗</td>
+                <td>♘</td>
+                <td>♖</td>
+                <th>1</th>
+            </tr>
+            <tr>
+                <th>2</th>
+                <td>♙</td>
+                <td>♙</td>
+                <td>♙</td>
+                <td>♙</td>
+                <td>♙</td>
+                <td>♙</td>
+                <td>♙</td>
+                <td>♙</td>
+                <th>2</th>
+            </tr>
+            <tr>
+                <th>3</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <th>3</th>
+            </tr>
+            <tr>
+                <th>4</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <th>4</th>
+            </tr>
+            <tr>
+                <th>5</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <th>5</th>
                 </tr>
                 <tr>
-                    <th>1</th>
-                    <td>2</td>
-                    <td rowspan=2 class="osszevont">3</td>
-                    <td>4</td>
+                    <th>6</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <th>6</th>
                 </tr>
                 <tr>
-                    <th>1</th>
-                    <td>2</td>
-                    <td>4</td>
+                    <th>7</th>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <td>♟︎</td>
+                    <th>7</th>
                 </tr>
                 <tr>
-                    <th>1</th>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
+                    <th>8</th>
+                    <td>♜</td>
+                    <td>♞</td>
+                    <td>♝</td>
+                    <td>♛</td>
+                    <td>♚</td>
+                    <td>♝</td>
+                    <td>♞</td>
+                    <td>♜</td>
+                    <th>8</th>
                 </tr>
                 <tr>
-                    <th>1</th>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
+                    <th></th>
+                    <th>a</th>
+                    <th>b</th>
+                    <th>c</th>
+                    <th>d</th>
+                    <th>e</th>
+                    <th>f</th>
+                    <th>g</th>
+                    <th>h</th>
+                    <th></th>
                 </tr>
             </tbody>
         </table>
     </article>
 
 </body>
-
 </html>
